--- a/pvr.filmon/changelog.txt
+++ b/pvr.filmon/changelog.txt
@@ -1,5 +1,19 @@
+3.0.1
+Update build system version and cleanup
+Fix package check for JsonCpp
+Added AppVeyor for Windows related build tests
+
 3.0.0
 Update to PVR addon API v6.0.0
+
+2.4.4
+Updated Language files from Transifex
+
+2.4.3
+Updated Language files from Transifex
+
+2.4.2
+Updated Language files from Transifex
 
 2.4.1
 Update to PVR addon API v5.10.1
