--- a/pvr.filmon/changelog.txt
+++ b/pvr.filmon/changelog.txt
@@ -1,3 +1,6 @@
+3.1.0
+Update: Recompile for 6.1.0 PVR Addon API compatibility
+
 3.0.1
 Update build system version and cleanup
 Fix package check for JsonCpp
