--- a/pvr.filmon/changelog.txt
+++ b/pvr.filmon/changelog.txt
@@ -1,3 +1,6 @@
+3.1.4
+- Upadte PVR API 6.2.0
+
 3.1.3
 Replace AppVeyor with Azure for test build (better performance)
 Add p8-platform to addon depends instead of from kodi
