--- a/pvr.filmon/changelog.txt
+++ b/pvr.filmon/changelog.txt
@@ -1,3 +1,9 @@
+3.2.2:
+- Update PVR API 6.4.0
+- Update license name and add forum url on addon.xml
+- Change source license to use SPDX
+- Minor cleanups
+
 3.2.1
 - Update PVR API 6.3.0
 
