--- a/pvr.filmon/changelog.txt
+++ b/pvr.filmon/changelog.txt
@@ -1,3 +1,7 @@
+5.1.0:
+- Fix prefer HD setting
+- Choose between favourite channels and all channels
+
 5.0.1:
 - Use atoi instead of stoi and stoul thread dying
 
