--- a/pvr.filmon/resources/language/resource.language.en_gb/strings.po
+++ b/pvr.filmon/resources/language/resource.language.en_gb/strings.po
@@ -27,3 +27,7 @@ msgstr ""
 msgctxt "#30002"
 msgid "Prefer HD Streams"
 msgstr ""
+
+msgctxt "#30003"
+msgid "Only load favourite channels"
+msgstr ""
