increase version to 6.0.0 (API related)

--- a/pvr.filmon/changelog.txt
+++ b/pvr.filmon/changelog.txt
@@ -1,3 +1,8 @@
+6.0.0:
+- Update PVR API 7.0.2
+- Use Kodi API about string to MD5
+- Fix some compile warnings by add of ATTRIBUTE_HIDDEN
+
 5.1.0:
 - Fix prefer HD setting
 - Choose between favourite channels and all channels
