--- a/pvr.filmon/resources/language/resource.language.am_et/strings.po
+++ b/pvr.filmon/resources/language/resource.language.am_et/strings.po
@@ -17,6 +17,14 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Generator: Weblate 4.7\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr ""
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr ""
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "የ ተጠቃሚ ስም"
