--- a/pvr.filmon/resources/language/resource.language.ar_sa/strings.po
+++ b/pvr.filmon/resources/language/resource.language.ar_sa/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr ""
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr ""
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "اسم المستخدم"
