--- a/pvr.filmon/resources/language/resource.language.be_by/strings.po
+++ b/pvr.filmon/resources/language/resource.language.be_by/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Кліент Filmon PVR"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Інтэрфейс FilmOn. Падтрымліваецца прагляд струменевага ТБ і відэазапісаў і праца з тэлегідам. Патрабуецца падпіска FilmOn. Перад уключэннем патрабуецца: (а) Пазначыць каналы ў FilmOn як упадабаныя, каб убачыць іх у Kodi (б) увесці імя карыстальніка і пароль у наладах гэтага дапаўнення. Нататка: запіс можа з'явіцца праз некалькі хвілін пасля таго, як таймер будзе завершаны."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Карыстальнік"
