--- a/pvr.filmon/resources/language/resource.language.bg_bg/strings.po
+++ b/pvr.filmon/resources/language/resource.language.bg_bg/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Клиент за ПВР „Filmon“"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Клиент за „Filmon“. Поддържа телевизия на живо, записи и електронен програмен справочник. Изисква абонамент за Filmon. Преди да включите, направете следното: (а) Във Filmon задайте каналите като любими, за да ги видите в Kodi; (б) Въведете потребителското си име и паролата си в настройките на тази добавка. Забележка: записите може да се появят няколко минути, след като броячът изтече."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Потребител"
