--- a/pvr.filmon/resources/language/resource.language.ca_es/strings.po
+++ b/pvr.filmon/resources/language/resource.language.ca_es/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Client PVR Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Frontal de Filmon. És compatible amb la TV en directe, enregistraments, guia electrònica de programació (EPG). Requereix una subscripció a Filmon. Abans d'activar: (a) En Filmon, configureu els canals com a preferits per veure'ls a Kodi (b) Configureu aquest complement amb el vostre usuari i contrasenya. Nota: Els enregistraments poden trigar diversos minuts a aparèixer després de finalitzar-se el comptador."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Nom d'usuari"
