--- a/pvr.filmon/resources/language/resource.language.cs_cz/strings.po
+++ b/pvr.filmon/resources/language/resource.language.cs_cz/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Klient nahrávače videa pro Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Rozhraní Filmon. Podporuje živé vysílání, nahrávání, televizní program. Vyžaduje předplatné Filmon. Před povolením: (a) nastavte ve Filmonu kanály jako oblíbené, abyste je viděli v Kodi (b) zadejte své uživatelské jméno a heslo v nastavení tohoto doplňku. Poznámka: nahrávky se mohou objevit až za několi minut po dokončení časovače."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Uživatelské jméno"
