--- a/pvr.filmon/resources/language/resource.language.cy_gb/strings.po
+++ b/pvr.filmon/resources/language/resource.language.cy_gb/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1) ? 0 : (n==2) ? 1 : (n != 8 && n != 11) ? 2 : 3;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Cleient Recordydd Fideo Personol Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Blaen Filmon. Mae'n cynnal teledu byw, recordiadau, a chanllawiau rhaglenni electronig. Bydd angen tanysgrifiad Filmon. Cyn ei alluogi: (a) yn Filmon mae angen gosod sianeli yn ffefrynnau i'w gweld nhw yn Kodi (b) rhowch eich enw defnyddiwr a chyfrinair yng ngosodiadau'r ychwanegyn. Sylwer: gall recordiad gymryd rhai munudau i ymddangos wedi i'r amserydd gwblhau ei waith."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Enw defnyddiwr"
