--- a/pvr.filmon/resources/language/resource.language.el_gr/strings.po
+++ b/pvr.filmon/resources/language/resource.language.el_gr/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Πελάτης PVR Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Frontend για το Filmon. Υποστηρίζει Live TV, εγγραφές, EPG. Απαιτείται συνδρομή/εγγραφή στο Filmon. Πριν το ενεργοποιήσετε: (α) ορίστε στο Filmon τα κανάλια σαν αγαπημένα για να εμφανίζονται στο Kodi, (β) εισάγετε το όνομα χρήστη και τον κωδικό σας στις ρυθμίσεις του πρόσθετου. Σημείωση: ενδέχεται να περάσουν κάποια λεπτά προτού εμφανιστούν οι εγγραφές μετά την ολοκλήρωση του χρονοδιακόπτη."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Όνομα χρήστη"
