--- a/pvr.filmon/resources/language/resource.language.es_ar/strings.po
+++ b/pvr.filmon/resources/language/resource.language.es_ar/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Cliente PVF Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Frontend Filmon. Soporta TV en vivo, grabación, GEP. Requiere una cuenta Filmon. Antes de activar: (a) Marque canales como favoritos en Filmon para poder verlos en Kodi (b) introduzca su nombre de usuario y contraseña en los ajustes de este add-on. Nota: Es posible que las grabaciones aparezcan luego de varios minutos después de que se complete el cronómetro."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Usuario"
