--- a/pvr.filmon/resources/language/resource.language.fi_fi/strings.po
+++ b/pvr.filmon/resources/language/resource.language.fi_fi/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Kodin Filmon-asiakasohjelma"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon-asiakasohjelma. Tukee suoria tv-lähetyksiä, tallennuksia ja ohjelmaopasta. Tarvitsee toimiakseen voimassaolevan Filmon-tilauksen. Ennen käyttöönottoa: (a) Aseta suosikkikanavasi Filmonissa (b) syötä käyttäjänimesi ja salasanasi tämän lisäosan asetuksiin. Huom! Tallennukset saattavat ilmestyä vasta monta minuuttia tallennuksen päättymisen jälkeen."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Käyttäjänimi"
