--- a/pvr.filmon/resources/language/resource.language.fr_ca/strings.po
+++ b/pvr.filmon/resources/language/resource.language.fr_ca/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Client de numériscope Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Frontale Filmon. Prend en charge la télé en direct, les enregistrements et le GÉP. Exige un abonnement à Filmon. Avant de l’activer : (a) dans Filmon, définir les chaînes comme favorites pour les voir dans Kodi (b)  saisir votre nom d’utilisateur et votre mot de passe dans les paramètres de l’addiciel. Note : en fin de minuterie, les enregistrements peuvent prendre plusieurs minutes avant d’apparaître."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Nom d’utilisateur"
