--- a/pvr.filmon/resources/language/resource.language.hu_hu/strings.po
+++ b/pvr.filmon/resources/language/resource.language.hu_hu/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR Kliens"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon előtét. Támogatja az élő TV-t, felvételeket, EPG-t. Filmon regisztráció szükséges. Engedélyezése előtt: (a) a Filmon-ban állítsa be kedvencként a csatornát hogy megjelenjen a Kodi-ban (b) írja be a felhasználónevet és a jelszót a kiegészítő beállításainál. Megjegyzés: a felvételek befejezése után előfordulhat hogy csak egy idő múlva jelennek meg a felvételi listában."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Felhasználónév"
