--- a/pvr.filmon/resources/language/resource.language.id_id/strings.po
+++ b/pvr.filmon/resources/language/resource.language.id_id/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Client Filmon PVR"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Front end Filmon. Mendukung siaran TV, rekaman, EPG. Memerlukan langganan Filmon. Sebelum mengaktifkan: (a) dalam menetapkan saluran Filmon sebagai favorit untuk melihat mereka di Kodi (b) masukkan nama penggunan dan sandi pada pengaturan addon ini. Catatan : rekaman bisa memerlukan beberapa menit untuk muncul setelah timer selesai"
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Nama Pengguna"
