--- a/pvr.filmon/resources/language/resource.language.it_it/strings.po
+++ b/pvr.filmon/resources/language/resource.language.it_it/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Client PVR Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Frontend Filmon. Supporta TV in diretta, registrazioni, EPG. Richiede l'abbonamento a Filmon. Prima di abilitare: (a) in Filmon, imposta i canali come preferiti per visualizzarli in Kodi (b) inserisci i tuoi username e password nelle impostazioni dell'addon. Nota: le registrazioni potrebbero apparire dopo alcuni minuti dallo scadere del timer."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Nome utente"
