--- a/pvr.filmon/resources/language/resource.language.ja_jp/strings.po
+++ b/pvr.filmon/resources/language/resource.language.ja_jp/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVRクライアント"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmonフロントエンド。テレビ放送、録画、EPGをサポートします。Filmonのサブスクリプションが必要です。有効にする前に: (a) KodiのFilmonで、チャンネルをお気に入りとして設定します。(b) このアドオンの設定であなたのユーザー名とパスワードを入力してください。注: タイマーが完了してから録画が表示されるまでに数分かかることがあります。"
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "ユーザー名"
