--- a/pvr.filmon/resources/language/resource.language.lt_lt/strings.po
+++ b/pvr.filmon/resources/language/resource.language.lt_lt/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR klientas"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon naudotojo sąsaja. Palaiko TV transliaciją, laidų įrašymą, EPG. Reikalinga Filmon paskyra. Prieš įjungiant: (a) Filmon puslapyje nustatykite kanalus, kuriuos norite matyti Kodi, kaip mėgstamiausius (b) įveskite savo vartotojo vardą ir slaptažodį šio priedo nustatymuose. Pastaba: įrašymo atsiradimui gali prireikti keleto minučių po laikmačio sukūrimo."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Vartotojo vardas"
