--- a/pvr.filmon/resources/language/resource.language.mn_mn/strings.po
+++ b/pvr.filmon/resources/language/resource.language.mn_mn/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR харилцагч"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon нүүр. Live TV, бичлэг, EPG дэмждэг. Filmon захиалсан байх шаардлагатай. Идэвхижүүлэхийн өмнө: (a) in Filmon set channels as favourite to see them in Kodi (b) Энэхүү addon's тохиргоонд хэрэглэгчийн нэр, нууц үгээ оруулна уу. Анхааруулга: бичлэг нь цаг тоололт дууссанаас хойш гарч иртэл хэдэн минут болох боломжтой. "
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Хэрэглэгчийн нэр"
