--- a/pvr.filmon/resources/language/resource.language.ms_my/strings.po
+++ b/pvr.filmon/resources/language/resource.language.ms_my/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Klien PVR Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Bahagian hadapan Filmon. Menyokong TV langsung, rakaman, EPG. Memerlukan langganan Filmon. Sebelum dibenarkan: (a) dalam Filmon tetapkan saluran sebagai kegemaran untuk menontonnya di dalam Kodi (b) masukkan nama pengguna dan kata laluan di dalam tetapan tambahan ini. Perhatian: rakaman mengambil masa beberapa minit untuk muncul selepas pemasa selesai."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Nama Pengguna"
