--- a/pvr.filmon/resources/language/resource.language.mt_mt/strings.po
+++ b/pvr.filmon/resources/language/resource.language.mt_mt/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n==0 || ( n%100>1 && n%100<11) ? 1 : (n%100>10 && n%100<20 ) ? 2 : 3);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR Client"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Il-Filmon frontend isservi biex thaddem Telvixin live, irrekordjar, EPG. Trid tkun miktub ma Filmon. Qabel thaddem: (a)  f'Filmon ghazel xi stazzjonijiet bhala l-favoriti tieghek halli tkun tista' tarahom f'Kodi (b)  dahhal il- username u l- kodici fis-settings ta din l-applikazzjoni. N.B. Recordings jistghu jiehdu numru ta' minuti sakemm jigu jidhru wara li l-arlogg ilesti. "
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Username"
