--- a/pvr.filmon/resources/language/resource.language.nl_nl/strings.po
+++ b/pvr.filmon/resources/language/resource.language.nl_nl/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR-cliënt"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon-frontend. Ondersteunt live-TV, opnamen en EPG. Vereist een Filmon-inschrijving. Voordat je inschakelt: (a) in Filmon stel kanalen in als favoriet om ze te zien in Kodi (b) voer je gebruikersnaam en -wachtwoord in in de add-oninstellingen. PS: opnamen kunnen meerdere minuten duren voordat ze worden getoond nadat de timer is afgelopen."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Gebruikersnaam"
