--- a/pvr.filmon/resources/language/resource.language.pl_pl/strings.po
+++ b/pvr.filmon/resources/language/resource.language.pl_pl/strings.po
@@ -17,6 +17,14 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.7.1\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Klient telewizji dla FilmOn"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Klient telewizji dla FilmOn obsługuje transmisję kanałów telewizyjnych, nagrywanie oraz funkcje przewodnika telewizyjnego. Wymaga płatnej subskrypcji usług FilmOn. Przed użyciem należy: (a) ustawić kanały jako ulubione (b) wprowadzić nazwę użytkownika i hasło w ustawieniach klienta. Uwaga: Nagrania mogą się pojawić dopiero po kilku minutach po zakończeniu nagrywania."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Użytkownik"
