--- a/pvr.filmon/resources/language/resource.language.pt_br/strings.po
+++ b/pvr.filmon/resources/language/resource.language.pt_br/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Cliente de PVR Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "PVR Filmon. Suporte TV ao Vivo, gravações, EPG. Requer uma subscrição Filmon. Antes de ativar: (a) em Filmon defina os canais favoritos para vê-los no Kodi (b) Entre seu nome de usuário e senha nos ajustes do addon.&#10;Nota: Gravações pode levar algum tempo para ficar disponível após o mesmo ter sido completado."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Nome de utilizador"
