--- a/pvr.filmon/resources/language/resource.language.pt_pt/strings.po
+++ b/pvr.filmon/resources/language/resource.language.pt_pt/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Cliente PVR Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Interface Filmon. Suporta TV em direto, gravações e EPG. Requer uma subscrição Filmon. Antes de ativar: (a) no Filmon, defina os canais como favoritos para os ver no Kodi (b), digite o seu nome de utilizador e a palavra-passe nas definições do add-on. Nota: as gravações podem levar alguns minutos a aparecer após o temporizador ter concluído."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Nome de utilizador"
