--- a/pvr.filmon/resources/language/resource.language.sk_sk/strings.po
+++ b/pvr.filmon/resources/language/resource.language.sk_sk/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR klient"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon priamy prístup. Podpouje živú TV, nahrávania, EPG. Vyžaduje Filmon predplatné. Pred tým ako umožníš (a) vo Filmone kanály ako obľúbené vidieť v Kodi (b) vlož svoje prístupové meno a heslo v nastaveniach tohto add on. Nahrávanie môže trvať niekoľko minút po ukončeni časomiery."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Používateľské meno"
