--- a/pvr.filmon/resources/language/resource.language.sl_si/strings.po
+++ b/pvr.filmon/resources/language/resource.language.sl_si/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Odjemalec PVR Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Odjemalec Filmon. Podpira TV v živo, posnetke, EPG. Potrebna je naročnina na Filmon. Preden omogočite: (a) v Filmonu nastavite programe kot priljubljene, da se prikažejo v Kodiju (b) vnesite vaše uporabniško ime in geslo v nastavitvah tega dodatka. Opomba: posnetki se lahko prikažejo šele po nekaj minutah, ko se snemanje zaključi."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Uporabniško ime"
