--- a/pvr.filmon/resources/language/resource.language.sq_al/strings.po
+++ b/pvr.filmon/resources/language/resource.language.sq_al/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Klient Filmon PVR"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon frontend. Mbështet TV direkt, regjistrime, EPG. Kërkon një abonim Filmon. Para se të mundësosh: (a) në Filmon vendos kanale si të pëlqyera që ti shohësh në Kodi (b) shkruani përdoruesin dhe fjalëkalimin tuaj në këtë cilësim addon's. Shënim: regjistrimet mund të kërkojnë disa minuta për t'u shfaqur pas përfundimit të kohës."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Përdorues"
