--- a/pvr.filmon/resources/language/resource.language.sr_rs/strings.po
+++ b/pvr.filmon/resources/language/resource.language.sr_rs/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR клијент"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Филмон интерфејс. Подржава ТВ Уживо, снимке, EPG. Захтева Filmon претплату. Пре омогућивања: (а) у Filmon-у подесите канале као омиљено да би их видели у Kodi (б) унесите своје корисничко име и лозинку у подешавањима овог додатног програма. Напомена: снимцима је некада потребно неколико минута да би се појавили након што се тајмер заврши."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Корисничко име"
