--- a/pvr.filmon/resources/language/resource.language.sr_rs@latin/strings.po
+++ b/pvr.filmon/resources/language/resource.language.sr_rs@latin/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR klijent"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon interfejs. Podržava TV Uživo, snimke, EPG. Zahteva Filmon pretplatu. Pre omogućivanja: (a) u Filmonu podesite kanale kao omiljeno da bi ih videli u Kodi (b) unesite svoje korisničko ime i lozinku u podešavanjima ovog dodatnog programa. Napomena: snimcima je nekada potrebno nekoliko minuta da bi se pojavili nakon što se tajmer završi."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Korisničko ime"
