--- a/pvr.filmon/resources/language/resource.language.sv_se/strings.po
+++ b/pvr.filmon/resources/language/resource.language.sv_se/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "PVR-klienten Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon frontend. Stöder Live-TV, inspelningar, EPG. Kräver ett Filmon-abonnemang. Innan du aktiverar: (a) Ställ in favoritkanaler i Filmon för att kunna se dem i Kodi. (b) Ange ditt användarnamn och lösenord i inställningar för detta tillägg. Observera: Det kan ta flera minuter innan inspelningar visas efter att timern är klar."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Användarnamn"
