--- a/pvr.filmon/resources/language/resource.language.szl/strings.po
+++ b/pvr.filmon/resources/language/resource.language.szl/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Klijynt PVR Filmon"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Frontend ôd Filmona. Podpiyrŏ TV, nagrywaniy, EPG. Wymŏgŏ abōniyrowaniŏ Filmona. Przed włōnczyniym: (a) we Filmonie przidej kanały do wertownych, coby je ôbezdrzeć we Kodi, (b) wkludź swoje miano ôd używŏcza i hasło we sztelōnkach ôð tyj przidŏwki. Pozōr: nagrania mogōm sie pokŏzywać pŏrã minut po skōńczyniu nagrywaniŏ."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Miano ôd używŏcza"
