--- a/pvr.filmon/resources/language/resource.language.th_th/strings.po
+++ b/pvr.filmon/resources/language/resource.language.th_th/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr ""
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr ""
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "ชื่อผู้ใช้"
