--- a/pvr.filmon/resources/language/resource.language.tr_tr/strings.po
+++ b/pvr.filmon/resources/language/resource.language.tr_tr/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR İstemcisi"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon ön ucu. Canlı TV'leri, kayıtları, EPG'leri destekler. Bir Filmon aboneliği gerektirir. Etkinleştirmeden önce: (a) Kodi içerisinde görmek için Filmon içerisinde kanalları favori olarak ayarlayın (b) bu eklentinin ayarlarında kullanıcı adı ve parolanızı girin. Not: Kayıtların görünmesi için zamanlayıcı tamamlandıktan sonra birkaç dakika gerekebilir."
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "Kullanıcı adı"
