--- a/pvr.filmon/resources/language/resource.language.zh_cn/strings.po
+++ b/pvr.filmon/resources/language/resource.language.zh_cn/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR 客户端"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon 前端。支持直播电视、录像、电子节目单。需要有 Filmon 订阅。激活前：(a) 在 Filmon 中设置喜爱的频道以便在 Kodi 中看到 (b) 在本插件的设置中输入你的用户名和密码。注意：录像要在完成后几分钟后才能看到。"
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "用户名"
