--- a/pvr.filmon/resources/language/resource.language.zh_tw/strings.po
+++ b/pvr.filmon/resources/language/resource.language.zh_tw/strings.po
@@ -16,6 +16,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "Filmon PVR Client"
+msgstr "Filmon PVR 用戶端"
+
+msgctxt "Addon Description"
+msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
+msgstr "Filmon 前端介面。支援即時電視節目，錄影，電子節目表。需有訂閱Filmon。在開啟前：(a) 在 Filmon 中設定喜愛頻道後，才能在Kodi中看到 (b) 在本附加元件的設定中輸入使用者名稱及密碼。注意：錄影檔可能會在錄影完成幾分鐘之後才看得到。"
+
 msgctxt "#30000"
 msgid "Username"
 msgstr "帳號"
